update README.md, update wallpaper script

--- a/home/Liqyid/common/optional/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/ags_notebook/style/material.scss
@@ -1,76 +1,76 @@
 $darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #00ACFE;
-$secondary_paletteKeyColor: #677796;
-$tertiary_paletteKeyColor: #6D74A6;
-$neutral_paletteKeyColor: #707881;
-$neutral_variant_paletteKeyColor: #6E7883;
-$background: #F7F9FF;
-$onBackground: #151C23;
-$surface: #F7F9FF;
-$surfaceDim: #D3DBE5;
-$surfaceBright: #F7F9FF;
+$primary_paletteKeyColor: #777585;
+$secondary_paletteKeyColor: #787680;
+$tertiary_paletteKeyColor: #77758B;
+$neutral_paletteKeyColor: #787678;
+$neutral_variant_paletteKeyColor: #787678;
+$background: #FCF8FA;
+$onBackground: #1C1B1D;
+$surface: #FCF8FA;
+$surfaceDim: #DDD9DB;
+$surfaceBright: #FCF8FA;
 $surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #EDF4FF;
-$surfaceContainer: #E7EFF9;
-$surfaceContainerHigh: #E1E9F3;
-$surfaceContainerHighest: #DBE3ED;
-$onSurface: #151C23;
-$surfaceVariant: #D9E4F0;
-$onSurfaceVariant: #3E4852;
-$inverseSurface: #293139;
-$inverseOnSurface: #EAF1FC;
-$outline: #6B7681;
-$outlineVariant: #BDC8D4;
+$surfaceContainerLow: #F7F2F4;
+$surfaceContainer: #F1EDEF;
+$surfaceContainerHigh: #EBE7E9;
+$surfaceContainerHighest: #E5E1E3;
+$onSurface: #1C1B1D;
+$surfaceVariant: #E5E1E3;
+$onSurfaceVariant: #484648;
+$inverseSurface: #313032;
+$inverseOnSurface: #F4F0F1;
+$outline: #767476;
+$outlineVariant: #C9C5C7;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #006496;
-$primary: #006496;
+$surfaceTint: #5E5D6C;
+$primary: #5E5D6C;
 $onPrimary: #FFFFFF;
-$primaryContainer: #CCE5FF;
-$onPrimaryContainer: #001E31;
-$inversePrimary: #91CDFF;
-$secondary: #4F5F7D;
+$primaryContainer: #E4E0F2;
+$onPrimaryContainer: #1B1A27;
+$inversePrimary: #C8C4D6;
+$secondary: #5F5D67;
 $onSecondary: #FFFFFF;
-$secondaryContainer: #CADAFE;
-$onSecondaryContainer: #091B36;
-$tertiary: #6B71A3;
+$secondaryContainer: #E2DEE9;
+$onSecondaryContainer: #1B1B23;
+$tertiary: #747288;
 $onTertiary: #FFFFFF;
-$tertiaryContainer: #6B71A3;
+$tertiaryContainer: #747288;
 $onTertiaryContainer: #FFFFFF;
 $error: #BA1A1A;
 $onError: #FFFFFF;
 $errorContainer: #FFDAD6;
 $onErrorContainer: #410002;
-$primaryFixed: #CCE5FF;
-$primaryFixedDim: #91CDFF;
-$onPrimaryFixed: #001E31;
-$onPrimaryFixedVariant: #004B72;
-$secondaryFixed: #D6E3FF;
-$secondaryFixedDim: #B6C7EA;
-$onSecondaryFixed: #091B36;
-$onSecondaryFixedVariant: #374764;
-$tertiaryFixed: #DFE0FF;
-$tertiaryFixedDim: #BDC3FA;
-$onTertiaryFixed: #101744;
-$onTertiaryFixedVariant: #3D4372;
+$primaryFixed: #E4E0F2;
+$primaryFixedDim: #C8C4D6;
+$onPrimaryFixed: #1B1A27;
+$onPrimaryFixedVariant: #474554;
+$secondaryFixed: #E5E1EC;
+$secondaryFixedDim: #C8C5D0;
+$onSecondaryFixed: #1B1B23;
+$onSecondaryFixedVariant: #47464F;
+$tertiaryFixed: #E4E0F9;
+$tertiaryFixedDim: #C7C4DC;
+$onTertiaryFixed: #1B1A2C;
+$onTertiaryFixedVariant: #464559;
 $success: #4F6354;
 $onSuccess: #FFFFFF;
 $successContainer: #D1E8D5;
 $onSuccessContainer: #0C1F13;
-$term0: #DDE7F4;
-$term1: #255BC2;
-$term2: #008CAA;
-$term3: #7E60B0;
-$term4: #009993;
-$term5: #3369BB;
-$term6: #4287AE;
-$term7: #212225;
+$term0: #E9E4E7;
+$term1: #7445C1;
+$term2: #3988AE;
+$term3: #865EAB;
+$term4: #A67D8F;
+$term5: #7359BB;
+$term6: #707FAD;
+$term7: #232125;
 $term8: #0D0D0D;
-$term9: #255BC2;
-$term10: #008CAA;
-$term11: #7E60B0;
-$term12: #009993;
-$term13: #3369BB;
-$term14: #4287AE;
-$term15: #001D32;
+$term9: #7445C1;
+$term10: #3988AE;
+$term11: #865EAB;
+$term12: #A67D8F;
+$term13: #7359BB;
+$term14: #707FAD;
+$term15: #1C1A22;
