add VFIO support, GPU passthrough with specialization

--- a/home/Liqyid/common/optional/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/ags_notebook/style/material.scss
@@ -1,76 +1,76 @@
-$darkmode: False;
+$darkmode: True;
 $transparent: False;
-$primary_paletteKeyColor: #777585;
-$secondary_paletteKeyColor: #787680;
-$tertiary_paletteKeyColor: #77758B;
+$primary_paletteKeyColor: #737685;
+$secondary_paletteKeyColor: #73747D;
+$tertiary_paletteKeyColor: #71768B;
 $neutral_paletteKeyColor: #787678;
 $neutral_variant_paletteKeyColor: #787678;
-$background: #FCF8FA;
-$onBackground: #1C1B1D;
-$surface: #FCF8FA;
-$surfaceDim: #DDD9DB;
-$surfaceBright: #FCF8FA;
-$surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #F7F2F4;
-$surfaceContainer: #F1EDEF;
-$surfaceContainerHigh: #EBE7E9;
-$surfaceContainerHighest: #E5E1E3;
-$onSurface: #1C1B1D;
-$surfaceVariant: #E5E1E3;
-$onSurfaceVariant: #484648;
-$inverseSurface: #313032;
-$inverseOnSurface: #F4F0F1;
-$outline: #767476;
-$outlineVariant: #C9C5C7;
+$background: #131315;
+$onBackground: #E5E2E3;
+$surface: #131315;
+$surfaceDim: #131315;
+$surfaceBright: #39393A;
+$surfaceContainerLowest: #0E0E0F;
+$surfaceContainerLow: #1C1B1D;
+$surfaceContainer: #201F21;
+$surfaceContainerHigh: #2A2A2B;
+$surfaceContainerHighest: #353436;
+$onSurface: #E5E2E3;
+$surfaceVariant: #474648;
+$onSurfaceVariant: #C8C6C7;
+$inverseSurface: #E5E2E3;
+$inverseOnSurface: #313032;
+$outline: #929092;
+$outlineVariant: #474648;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #5E5D6C;
-$primary: #5E5D6C;
-$onPrimary: #FFFFFF;
-$primaryContainer: #E4E0F2;
-$onPrimaryContainer: #1B1A27;
-$inversePrimary: #C8C4D6;
-$secondary: #5F5D67;
-$onSecondary: #FFFFFF;
-$secondaryContainer: #E2DEE9;
-$onSecondaryContainer: #1B1B23;
-$tertiary: #747288;
-$onTertiary: #FFFFFF;
-$tertiaryContainer: #747288;
-$onTertiaryContainer: #FFFFFF;
-$error: #BA1A1A;
-$onError: #FFFFFF;
-$errorContainer: #FFDAD6;
-$onErrorContainer: #410002;
-$primaryFixed: #E4E0F2;
-$primaryFixedDim: #C8C4D6;
-$onPrimaryFixed: #1B1A27;
-$onPrimaryFixedVariant: #474554;
-$secondaryFixed: #E5E1EC;
-$secondaryFixedDim: #C8C5D0;
-$onSecondaryFixed: #1B1B23;
-$onSecondaryFixedVariant: #47464F;
-$tertiaryFixed: #E4E0F9;
-$tertiaryFixedDim: #C7C4DC;
-$onTertiaryFixed: #1B1A2C;
-$onTertiaryFixedVariant: #464559;
-$success: #4F6354;
-$onSuccess: #FFFFFF;
-$successContainer: #D1E8D5;
-$onSuccessContainer: #0C1F13;
-$term0: #E9E4E7;
-$term1: #7445C1;
-$term2: #3988AE;
-$term3: #865EAB;
-$term4: #A67D8F;
-$term5: #7359BB;
-$term6: #707FAD;
-$term7: #232125;
-$term8: #0D0D0D;
-$term9: #7445C1;
-$term10: #3988AE;
-$term11: #865EAB;
-$term12: #A67D8F;
-$term13: #7359BB;
-$term14: #707FAD;
-$term15: #1C1A22;
+$surfaceTint: #C3C6D6;
+$primary: #C3C6D6;
+$onPrimary: #2D303D;
+$primaryContainer: #434654;
+$onPrimaryContainer: #E0E1F2;
+$inversePrimary: #5B5E6C;
+$secondary: #C6C6D0;
+$onSecondary: #2E3038;
+$secondaryContainer: #45464F;
+$onSecondaryContainer: #E2E1EC;
+$tertiary: #C1C5DD;
+$onTertiary: #2B3042;
+$tertiaryContainer: #8B90A5;
+$onTertiaryContainer: #000000;
+$error: #FFB4AB;
+$onError: #690005;
+$errorContainer: #93000A;
+$onErrorContainer: #FFDAD6;
+$primaryFixed: #E0E1F2;
+$primaryFixedDim: #C3C6D6;
+$onPrimaryFixed: #181B27;
+$onPrimaryFixedVariant: #434654;
+$secondaryFixed: #E2E1EC;
+$secondaryFixedDim: #C6C6D0;
+$onSecondaryFixed: #191B23;
+$onSecondaryFixedVariant: #45464F;
+$tertiaryFixed: #DDE1F9;
+$tertiaryFixedDim: #C1C5DD;
+$onTertiaryFixed: #161B2C;
+$onTertiaryFixedVariant: #414659;
+$success: #B5CCBA;
+$onSuccess: #213528;
+$successContainer: #374B3E;
+$onSuccessContainer: #D1E9D6;
+$term0: #1B1A1C;
+$term1: #967DFF;
+$term2: #64DCF0;
+$term3: #FFDCF3;
+$term4: #90ACD6;
+$term5: #A7A2EE;
+$term6: #9CCEFF;
+$term7: #E8D3DE;
+$term8: #C3B5C0;
+$term9: #C5B6FF;
+$term10: #F7FDFF;
+$term11: #FFFFFF;
+$term12: #CBDDF7;
+$term13: #DAD4FF;
+$term14: #F8FAFF;
+$term15: #E3E2E7;
