tweak VFIO, fix host lock-up

--- a/home/Liqyid/common/optional/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/ags_notebook/style/material.scss
@@ -28,12 +28,12 @@ $surfaceTint: #C3C6D6;
 $primary: #C3C6D6;
 $onPrimary: #2D303D;
 $primaryContainer: #434654;
-$onPrimaryContainer: #E0E1F2;
+$onPrimaryContainer: #DFE1F2;
 $inversePrimary: #5B5E6C;
-$secondary: #C6C6D0;
+$secondary: #C5C6D0;
 $onSecondary: #2E3038;
 $secondaryContainer: #45464F;
-$onSecondaryContainer: #E2E1EC;
+$onSecondaryContainer: #E2E2EC;
 $tertiary: #C1C5DD;
 $onTertiary: #2B3042;
 $tertiaryContainer: #8B90A5;
@@ -42,12 +42,12 @@ $error: #FFB4AB;
 $onError: #690005;
 $errorContainer: #93000A;
 $onErrorContainer: #FFDAD6;
-$primaryFixed: #E0E1F2;
+$primaryFixed: #DFE1F2;
 $primaryFixedDim: #C3C6D6;
 $onPrimaryFixed: #181B27;
 $onPrimaryFixedVariant: #434654;
-$secondaryFixed: #E2E1EC;
-$secondaryFixedDim: #C6C6D0;
+$secondaryFixed: #E2E2EC;
+$secondaryFixedDim: #C5C6D0;
 $onSecondaryFixed: #191B23;
 $onSecondaryFixedVariant: #45464F;
 $tertiaryFixed: #DDE1F9;
