--- a/home/Liqyid/common/optional/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/ags_notebook/style/material.scss
@@ -1,76 +1,76 @@
-$darkmode: True;
+$darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #737685;
-$secondary_paletteKeyColor: #73747D;
-$tertiary_paletteKeyColor: #71768B;
-$neutral_paletteKeyColor: #787678;
-$neutral_variant_paletteKeyColor: #787678;
-$background: #131315;
-$onBackground: #E5E2E3;
-$surface: #131315;
-$surfaceDim: #131315;
-$surfaceBright: #39393A;
-$surfaceContainerLowest: #0E0E0F;
-$surfaceContainerLow: #1C1B1D;
-$surfaceContainer: #201F21;
-$surfaceContainerHigh: #2A2A2B;
-$surfaceContainerHighest: #353436;
-$onSurface: #E5E2E3;
-$surfaceVariant: #474648;
-$onSurfaceVariant: #C8C6C7;
-$inverseSurface: #E5E2E3;
-$inverseOnSurface: #313032;
-$outline: #929092;
-$outlineVariant: #474648;
+$primary_paletteKeyColor: #0A7DFF;
+$secondary_paletteKeyColor: #717598;
+$tertiary_paletteKeyColor: #7A70A4;
+$neutral_paletteKeyColor: #737782;
+$neutral_variant_paletteKeyColor: #727785;
+$background: #F9F9FF;
+$onBackground: #171C25;
+$surface: #F9F9FF;
+$surfaceDim: #D7DAE6;
+$surfaceBright: #F9F9FF;
+$surfaceContainerLowest: #FFFFFF;
+$surfaceContainerLow: #F1F3FF;
+$surfaceContainer: #EBEDFA;
+$surfaceContainerHigh: #E5E8F5;
+$surfaceContainerHighest: #DFE2EF;
+$onSurface: #171C25;
+$surfaceVariant: #DEE2F2;
+$onSurfaceVariant: #414753;
+$inverseSurface: #2C303A;
+$inverseOnSurface: #EDF0FD;
+$outline: #6F7482;
+$outlineVariant: #C1C6D6;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #C3C6D6;
-$primary: #C3C6D6;
-$onPrimary: #2D303D;
-$primaryContainer: #434654;
-$onPrimaryContainer: #DFE1F2;
-$inversePrimary: #5B5E6C;
-$secondary: #C5C6D0;
-$onSecondary: #2E3038;
-$secondaryContainer: #45464F;
-$onSecondaryContainer: #E2E2EC;
-$tertiary: #C1C5DD;
-$onTertiary: #2B3042;
-$tertiaryContainer: #8B90A5;
-$onTertiaryContainer: #000000;
-$error: #FFB4AB;
-$onError: #690005;
-$errorContainer: #93000A;
-$onErrorContainer: #FFDAD6;
-$primaryFixed: #DFE1F2;
-$primaryFixedDim: #C3C6D6;
-$onPrimaryFixed: #181B27;
-$onPrimaryFixedVariant: #434654;
-$secondaryFixed: #E2E2EC;
-$secondaryFixedDim: #C5C6D0;
-$onSecondaryFixed: #191B23;
-$onSecondaryFixedVariant: #45464F;
-$tertiaryFixed: #DDE1F9;
-$tertiaryFixedDim: #C1C5DD;
-$onTertiaryFixed: #161B2C;
-$onTertiaryFixedVariant: #414659;
-$success: #B5CCBA;
-$onSuccess: #213528;
-$successContainer: #374B3E;
-$onSuccessContainer: #D1E9D6;
-$term0: #1B1A1C;
-$term1: #967DFF;
-$term2: #64DCF0;
-$term3: #FFDCF3;
-$term4: #90ACD6;
-$term5: #A7A2EE;
-$term6: #9CCEFF;
-$term7: #E8D3DE;
-$term8: #C3B5C0;
-$term9: #C5B6FF;
-$term10: #F7FDFF;
-$term11: #FFFFFF;
-$term12: #CBDDF7;
-$term13: #DAD4FF;
-$term14: #F8FAFF;
-$term15: #E3E2E7;
+$surfaceTint: #005BBF;
+$primary: #005BBF;
+$onPrimary: #FFFFFF;
+$primaryContainer: #D7E2FF;
+$onPrimaryContainer: #001A40;
+$inversePrimary: #ACC7FF;
+$secondary: #585C7E;
+$onSecondary: #FFFFFF;
+$secondaryContainer: #D4D7FF;
+$onSecondaryContainer: #151937;
+$tertiary: #786EA1;
+$onTertiary: #FFFFFF;
+$tertiaryContainer: #786EA1;
+$onTertiaryContainer: #FFFFFF;
+$error: #BA1A1A;
+$onError: #FFFFFF;
+$errorContainer: #FFDAD6;
+$onErrorContainer: #410002;
+$primaryFixed: #D7E2FF;
+$primaryFixedDim: #ACC7FF;
+$onPrimaryFixed: #001A40;
+$onPrimaryFixedVariant: #004492;
+$secondaryFixed: #DFE0FF;
+$secondaryFixedDim: #C1C4EB;
+$onSecondaryFixed: #151937;
+$onSecondaryFixedVariant: #414465;
+$tertiaryFixed: #E7DEFF;
+$tertiaryFixedDim: #CBBFF8;
+$onTertiaryFixed: #1D1342;
+$onTertiaryFixedVariant: #494070;
+$success: #4F6354;
+$onSuccess: #FFFFFF;
+$successContainer: #D1E8D5;
+$onSuccessContainer: #0C1F13;
+$term0: #E2E5F4;
+$term1: #5352C2;
+$term2: #3988AE;
+$term3: #7E60B0;
+$term4: #009993;
+$term5: #5762BB;
+$term6: #5E83AE;
+$term7: #222226;
+$term8: #0D0D0D;
+$term9: #5352C2;
+$term10: #3988AE;
+$term11: #7E60B0;
+$term12: #009993;
+$term13: #5762BB;
+$term14: #5E83AE;
+$term15: #001C3D;
