--- a/home/Liqyid/common/optional/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/ags_notebook/style/material.scss
@@ -1,76 +1,76 @@
-$darkmode: False;
+$darkmode: True;
 $transparent: False;
-$primary_paletteKeyColor: #0A7DFF;
-$secondary_paletteKeyColor: #717598;
-$tertiary_paletteKeyColor: #7A70A4;
-$neutral_paletteKeyColor: #737782;
-$neutral_variant_paletteKeyColor: #727785;
-$background: #F9F9FF;
-$onBackground: #171C25;
-$surface: #F9F9FF;
-$surfaceDim: #D7DAE6;
-$surfaceBright: #F9F9FF;
-$surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #F1F3FF;
-$surfaceContainer: #EBEDFA;
-$surfaceContainerHigh: #E5E8F5;
-$surfaceContainerHighest: #DFE2EF;
-$onSurface: #171C25;
-$surfaceVariant: #DEE2F2;
-$onSurfaceVariant: #414753;
-$inverseSurface: #2C303A;
-$inverseOnSurface: #EDF0FD;
-$outline: #6F7482;
-$outlineVariant: #C1C6D6;
+$primary_paletteKeyColor: #767585;
+$secondary_paletteKeyColor: #777680;
+$tertiary_paletteKeyColor: #76758B;
+$neutral_paletteKeyColor: #787678;
+$neutral_variant_paletteKeyColor: #787678;
+$background: #141315;
+$onBackground: #E5E1E3;
+$surface: #141315;
+$surfaceDim: #141315;
+$surfaceBright: #3A393A;
+$surfaceContainerLowest: #0E0E0F;
+$surfaceContainerLow: #1C1B1D;
+$surfaceContainer: #201F21;
+$surfaceContainerHigh: #2A2A2B;
+$surfaceContainerHighest: #353436;
+$onSurface: #E5E1E3;
+$surfaceVariant: #484648;
+$onSurfaceVariant: #C9C5C7;
+$inverseSurface: #E5E1E3;
+$inverseOnSurface: #313032;
+$outline: #929092;
+$outlineVariant: #484648;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #005BBF;
-$primary: #005BBF;
-$onPrimary: #FFFFFF;
-$primaryContainer: #D7E2FF;
-$onPrimaryContainer: #001A40;
-$inversePrimary: #ACC7FF;
-$secondary: #585C7E;
-$onSecondary: #FFFFFF;
-$secondaryContainer: #D4D7FF;
-$onSecondaryContainer: #151937;
-$tertiary: #786EA1;
-$onTertiary: #FFFFFF;
-$tertiaryContainer: #786EA1;
-$onTertiaryContainer: #FFFFFF;
-$error: #BA1A1A;
-$onError: #FFFFFF;
-$errorContainer: #FFDAD6;
-$onErrorContainer: #410002;
-$primaryFixed: #D7E2FF;
-$primaryFixedDim: #ACC7FF;
-$onPrimaryFixed: #001A40;
-$onPrimaryFixedVariant: #004492;
-$secondaryFixed: #DFE0FF;
-$secondaryFixedDim: #C1C4EB;
-$onSecondaryFixed: #151937;
-$onSecondaryFixedVariant: #414465;
-$tertiaryFixed: #E7DEFF;
-$tertiaryFixedDim: #CBBFF8;
-$onTertiaryFixed: #1D1342;
-$onTertiaryFixedVariant: #494070;
-$success: #4F6354;
-$onSuccess: #FFFFFF;
-$successContainer: #D1E8D5;
-$onSuccessContainer: #0C1F13;
-$term0: #E2E5F4;
-$term1: #5352C2;
-$term2: #3988AE;
-$term3: #7E60B0;
-$term4: #009993;
-$term5: #5762BB;
-$term6: #5E83AE;
-$term7: #222226;
-$term8: #0D0D0D;
-$term9: #5352C2;
-$term10: #3988AE;
-$term11: #7E60B0;
-$term12: #009993;
-$term13: #5762BB;
-$term14: #5E83AE;
-$term15: #001C3D;
+$surfaceTint: #C7C4D6;
+$primary: #C7C4D6;
+$onPrimary: #2F2F3D;
+$primaryContainer: #464554;
+$onPrimaryContainer: #E3E0F2;
+$inversePrimary: #5E5D6C;
+$secondary: #C8C5D0;
+$onSecondary: #303038;
+$secondaryContainer: #47464F;
+$onSecondaryContainer: #E4E1EC;
+$tertiary: #C6C4DD;
+$onTertiary: #2F2F42;
+$tertiaryContainer: #908EA5;
+$onTertiaryContainer: #000000;
+$error: #FFB4AB;
+$onError: #690005;
+$errorContainer: #93000A;
+$onErrorContainer: #FFDAD6;
+$primaryFixed: #E3E0F2;
+$primaryFixedDim: #C7C4D6;
+$onPrimaryFixed: #1A1A27;
+$onPrimaryFixedVariant: #464554;
+$secondaryFixed: #E4E1EC;
+$secondaryFixedDim: #C8C5D0;
+$onSecondaryFixed: #1B1B23;
+$onSecondaryFixedVariant: #47464F;
+$tertiaryFixed: #E2E0F9;
+$tertiaryFixedDim: #C6C4DD;
+$onTertiaryFixed: #1A1A2C;
+$onTertiaryFixedVariant: #454559;
+$success: #B5CCBA;
+$onSuccess: #213528;
+$successContainer: #374B3E;
+$onSuccessContainer: #D1E9D6;
+$term0: #1B1A1C;
+$term1: #AB74FF;
+$term2: #64DCF0;
+$term3: #FFDCF3;
+$term4: #98AAD8;
+$term5: #B39FEB;
+$term6: #9DCEFF;
+$term7: #E8D3DE;
+$term8: #C3B5C0;
+$term9: #D1B2FF;
+$term10: #F7FDFF;
+$term11: #FFFFFF;
+$term12: #CFDCF8;
+$term13: #E1D2FF;
+$term14: #F8FAFF;
+$term15: #E5E0E9;
