use shellapp builder for wal_set

--- a/home/Liqyid/common/optional/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/ags_notebook/style/material.scss
@@ -1,76 +1,76 @@
-$darkmode: True;
+$darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #767585;
-$secondary_paletteKeyColor: #777680;
-$tertiary_paletteKeyColor: #76758B;
+$primary_paletteKeyColor: #747685;
+$secondary_paletteKeyColor: #75767F;
+$tertiary_paletteKeyColor: #72768B;
 $neutral_paletteKeyColor: #787678;
 $neutral_variant_paletteKeyColor: #787678;
-$background: #141315;
-$onBackground: #E5E1E3;
-$surface: #141315;
-$surfaceDim: #141315;
-$surfaceBright: #3A393A;
-$surfaceContainerLowest: #0E0E0F;
-$surfaceContainerLow: #1C1B1D;
-$surfaceContainer: #201F21;
-$surfaceContainerHigh: #2A2A2B;
-$surfaceContainerHighest: #353436;
-$onSurface: #E5E1E3;
-$surfaceVariant: #484648;
-$onSurfaceVariant: #C9C5C7;
-$inverseSurface: #E5E1E3;
-$inverseOnSurface: #313032;
-$outline: #929092;
-$outlineVariant: #484648;
+$background: #FCF8FA;
+$onBackground: #1C1B1D;
+$surface: #FCF8FA;
+$surfaceDim: #DCD9DB;
+$surfaceBright: #FCF8FA;
+$surfaceContainerLowest: #FFFFFF;
+$surfaceContainerLow: #F6F3F4;
+$surfaceContainer: #F0EDEF;
+$surfaceContainerHigh: #EAE7E9;
+$surfaceContainerHighest: #E5E2E3;
+$onSurface: #1C1B1D;
+$surfaceVariant: #E5E2E3;
+$onSurfaceVariant: #474648;
+$inverseSurface: #313032;
+$inverseOnSurface: #F3F0F1;
+$outline: #757476;
+$outlineVariant: #C8C6C7;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #C7C4D6;
-$primary: #C7C4D6;
-$onPrimary: #2F2F3D;
-$primaryContainer: #464554;
-$onPrimaryContainer: #E3E0F2;
-$inversePrimary: #5E5D6C;
-$secondary: #C8C5D0;
-$onSecondary: #303038;
-$secondaryContainer: #47464F;
-$onSecondaryContainer: #E4E1EC;
-$tertiary: #C6C4DD;
-$onTertiary: #2F2F42;
-$tertiaryContainer: #908EA5;
-$onTertiaryContainer: #000000;
-$error: #FFB4AB;
-$onError: #690005;
-$errorContainer: #93000A;
-$onErrorContainer: #FFDAD6;
-$primaryFixed: #E3E0F2;
-$primaryFixedDim: #C7C4D6;
-$onPrimaryFixed: #1A1A27;
-$onPrimaryFixedVariant: #464554;
-$secondaryFixed: #E4E1EC;
-$secondaryFixedDim: #C8C5D0;
-$onSecondaryFixed: #1B1B23;
-$onSecondaryFixedVariant: #47464F;
-$tertiaryFixed: #E2E0F9;
-$tertiaryFixedDim: #C6C4DD;
-$onTertiaryFixed: #1A1A2C;
-$onTertiaryFixedVariant: #454559;
-$success: #B5CCBA;
-$onSuccess: #213528;
-$successContainer: #374B3E;
-$onSuccessContainer: #D1E9D6;
-$term0: #1B1A1C;
-$term1: #AB74FF;
-$term2: #64DCF0;
-$term3: #FFDCF3;
-$term4: #98AAD8;
-$term5: #B39FEB;
-$term6: #9DCEFF;
-$term7: #E8D3DE;
-$term8: #C3B5C0;
-$term9: #D1B2FF;
-$term10: #F7FDFF;
-$term11: #FFFFFF;
-$term12: #CFDCF8;
-$term13: #E1D2FF;
-$term14: #F8FAFF;
-$term15: #E5E0E9;
+$surfaceTint: #5B5E6C;
+$primary: #5B5E6C;
+$onPrimary: #FFFFFF;
+$primaryContainer: #E0E1F3;
+$onPrimaryContainer: #181B27;
+$inversePrimary: #C4C5D6;
+$secondary: #5D5E67;
+$onSecondary: #FFFFFF;
+$secondaryContainer: #E2E1EC;
+$onSecondaryContainer: #1A1B23;
+$tertiary: #6F7488;
+$onTertiary: #FFFFFF;
+$tertiaryContainer: #6F7488;
+$onTertiaryContainer: #FFFFFF;
+$error: #BA1A1A;
+$onError: #FFFFFF;
+$errorContainer: #FFDAD6;
+$onErrorContainer: #410002;
+$primaryFixed: #E0E1F3;
+$primaryFixedDim: #C4C5D6;
+$onPrimaryFixed: #181B27;
+$onPrimaryFixedVariant: #434654;
+$secondaryFixed: #E2E1EC;
+$secondaryFixedDim: #C6C6D0;
+$onSecondaryFixed: #1A1B23;
+$onSecondaryFixedVariant: #45464F;
+$tertiaryFixed: #DEE1F9;
+$tertiaryFixedDim: #C1C5DD;
+$onTertiaryFixed: #161B2C;
+$onTertiaryFixedVariant: #414659;
+$success: #4F6354;
+$onSuccess: #FFFFFF;
+$successContainer: #D1E8D5;
+$onSuccessContainer: #0C1F13;
+$term0: #E8E5E7;
+$term1: #624DC2;
+$term2: #3988AE;
+$term3: #7E60B0;
+$term4: #A67D8F;
+$term5: #645EBB;
+$term6: #6681AE;
+$term7: #222226;
+$term8: #0D0D0D;
+$term9: #624DC2;
+$term10: #3988AE;
+$term11: #7E60B0;
+$term12: #A67D8F;
+$term13: #645EBB;
+$term14: #6681AE;
+$term15: #1C1A22;
