wrap colorgen scripts with nix, code style adjustments

--- a/home/Liqyid/common/optional/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/ags_notebook/style/material.scss
@@ -1,76 +1,76 @@
 $darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #747685;
-$secondary_paletteKeyColor: #75767F;
-$tertiary_paletteKeyColor: #72768B;
-$neutral_paletteKeyColor: #787678;
-$neutral_variant_paletteKeyColor: #787678;
-$background: #FCF8FA;
-$onBackground: #1C1B1D;
-$surface: #FCF8FA;
-$surfaceDim: #DCD9DB;
-$surfaceBright: #FCF8FA;
+$primary_paletteKeyColor: #0C76FF;
+$secondary_paletteKeyColor: #727497;
+$tertiary_paletteKeyColor: #7C70A3;
+$neutral_paletteKeyColor: #747783;
+$neutral_variant_paletteKeyColor: #727785;
+$background: #FAF9FF;
+$onBackground: #181B25;
+$surface: #FAF9FF;
+$surfaceDim: #D7D9E6;
+$surfaceBright: #FAF9FF;
 $surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #F6F3F4;
-$surfaceContainer: #F0EDEF;
-$surfaceContainerHigh: #EAE7E9;
-$surfaceContainerHighest: #E5E2E3;
-$onSurface: #1C1B1D;
-$surfaceVariant: #E5E2E3;
-$onSurfaceVariant: #474648;
-$inverseSurface: #313032;
-$inverseOnSurface: #F3F0F1;
-$outline: #757476;
-$outlineVariant: #C8C6C7;
+$surfaceContainerLow: #F1F3FF;
+$surfaceContainer: #EBEDFB;
+$surfaceContainerHigh: #E5E7F5;
+$surfaceContainerHighest: #E0E2EF;
+$onSurface: #181B25;
+$surfaceVariant: #DEE2F2;
+$onSurfaceVariant: #424754;
+$inverseSurface: #2D303A;
+$inverseOnSurface: #EEF0FD;
+$outline: #707482;
+$outlineVariant: #C2C6D6;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #5B5E6C;
-$primary: #5B5E6C;
+$surfaceTint: #0059C6;
+$primary: #0059C6;
 $onPrimary: #FFFFFF;
-$primaryContainer: #E0E1F3;
-$onPrimaryContainer: #181B27;
-$inversePrimary: #C4C5D6;
-$secondary: #5D5E67;
+$primaryContainer: #D9E2FF;
+$onPrimaryContainer: #001A43;
+$inversePrimary: #AFC6FF;
+$secondary: #5A5C7E;
 $onSecondary: #FFFFFF;
-$secondaryContainer: #E2E1EC;
-$onSecondaryContainer: #1A1B23;
-$tertiary: #6F7488;
+$secondaryContainer: #D6D7FF;
+$onSecondaryContainer: #161937;
+$tertiary: #796DA0;
 $onTertiary: #FFFFFF;
-$tertiaryContainer: #6F7488;
+$tertiaryContainer: #796DA0;
 $onTertiaryContainer: #FFFFFF;
 $error: #BA1A1A;
 $onError: #FFFFFF;
 $errorContainer: #FFDAD6;
 $onErrorContainer: #410002;
-$primaryFixed: #E0E1F3;
-$primaryFixedDim: #C4C5D6;
-$onPrimaryFixed: #181B27;
-$onPrimaryFixedVariant: #434654;
-$secondaryFixed: #E2E1EC;
-$secondaryFixedDim: #C6C6D0;
-$onSecondaryFixed: #1A1B23;
-$onSecondaryFixedVariant: #45464F;
-$tertiaryFixed: #DEE1F9;
-$tertiaryFixedDim: #C1C5DD;
-$onTertiaryFixed: #161B2C;
-$onTertiaryFixedVariant: #414659;
+$primaryFixed: #D9E2FF;
+$primaryFixedDim: #AFC6FF;
+$onPrimaryFixed: #001A43;
+$onPrimaryFixedVariant: #004398;
+$secondaryFixed: #E0E0FF;
+$secondaryFixedDim: #C2C3EB;
+$onSecondaryFixed: #161937;
+$onSecondaryFixedVariant: #424465;
+$tertiaryFixed: #E8DDFF;
+$tertiaryFixedDim: #CDBEF7;
+$onTertiaryFixed: #1F1341;
+$onTertiaryFixedVariant: #4B3F6F;
 $success: #4F6354;
 $onSuccess: #FFFFFF;
 $successContainer: #D1E8D5;
 $onSuccessContainer: #0C1F13;
-$term0: #E8E5E7;
-$term1: #624DC2;
+$term0: #E2E5F4;
+$term1: #5651C2;
 $term2: #3988AE;
 $term3: #7E60B0;
-$term4: #A67D8F;
-$term5: #645EBB;
-$term6: #6681AE;
+$term4: #009993;
+$term5: #5A61BB;
+$term6: #6083AD;
 $term7: #222226;
 $term8: #0D0D0D;
-$term9: #624DC2;
+$term9: #5651C2;
 $term10: #3988AE;
 $term11: #7E60B0;
-$term12: #A67D8F;
-$term13: #645EBB;
-$term14: #6681AE;
-$term15: #1C1A22;
+$term12: #009993;
+$term13: #5A61BB;
+$term14: #6083AD;
+$term15: #061942;
