fix colorgen, add nautilus, restructure config

--- a/home/Liqyid/common/optional/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/ags_notebook/style/material.scss
@@ -1,76 +1,76 @@
-$darkmode: False;
+$darkmode: True;
 $transparent: False;
-$primary_paletteKeyColor: #0C76FF;
-$secondary_paletteKeyColor: #727497;
-$tertiary_paletteKeyColor: #7C70A3;
-$neutral_paletteKeyColor: #747783;
-$neutral_variant_paletteKeyColor: #727785;
-$background: #FAF9FF;
-$onBackground: #181B25;
-$surface: #FAF9FF;
-$surfaceDim: #D7D9E6;
-$surfaceBright: #FAF9FF;
-$surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #F1F3FF;
-$surfaceContainer: #EBEDFB;
-$surfaceContainerHigh: #E5E7F5;
-$surfaceContainerHighest: #E0E2EF;
-$onSurface: #181B25;
-$surfaceVariant: #DEE2F2;
-$onSurfaceVariant: #424754;
-$inverseSurface: #2D303A;
-$inverseOnSurface: #EEF0FD;
-$outline: #707482;
-$outlineVariant: #C2C6D6;
+$primary_paletteKeyColor: #777585;
+$secondary_paletteKeyColor: #787680;
+$tertiary_paletteKeyColor: #76758B;
+$neutral_paletteKeyColor: #787678;
+$neutral_variant_paletteKeyColor: #787678;
+$background: #141315;
+$onBackground: #E5E1E3;
+$surface: #141315;
+$surfaceDim: #141315;
+$surfaceBright: #3A393A;
+$surfaceContainerLowest: #0E0E0F;
+$surfaceContainerLow: #1C1B1D;
+$surfaceContainer: #201F21;
+$surfaceContainerHigh: #2A2A2B;
+$surfaceContainerHighest: #353436;
+$onSurface: #E5E1E3;
+$surfaceVariant: #484648;
+$onSurfaceVariant: #C9C5C7;
+$inverseSurface: #E5E1E3;
+$inverseOnSurface: #313032;
+$outline: #929092;
+$outlineVariant: #484648;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #0059C6;
-$primary: #0059C6;
-$onPrimary: #FFFFFF;
-$primaryContainer: #D9E2FF;
-$onPrimaryContainer: #001A43;
-$inversePrimary: #AFC6FF;
-$secondary: #5A5C7E;
-$onSecondary: #FFFFFF;
-$secondaryContainer: #D6D7FF;
-$onSecondaryContainer: #161937;
-$tertiary: #796DA0;
-$onTertiary: #FFFFFF;
-$tertiaryContainer: #796DA0;
-$onTertiaryContainer: #FFFFFF;
-$error: #BA1A1A;
-$onError: #FFFFFF;
-$errorContainer: #FFDAD6;
-$onErrorContainer: #410002;
-$primaryFixed: #D9E2FF;
-$primaryFixedDim: #AFC6FF;
-$onPrimaryFixed: #001A43;
-$onPrimaryFixedVariant: #004398;
-$secondaryFixed: #E0E0FF;
-$secondaryFixedDim: #C2C3EB;
-$onSecondaryFixed: #161937;
-$onSecondaryFixedVariant: #424465;
-$tertiaryFixed: #E8DDFF;
-$tertiaryFixedDim: #CDBEF7;
-$onTertiaryFixed: #1F1341;
-$onTertiaryFixedVariant: #4B3F6F;
-$success: #4F6354;
-$onSuccess: #FFFFFF;
-$successContainer: #D1E8D5;
-$onSuccessContainer: #0C1F13;
-$term0: #E2E5F4;
-$term1: #5651C2;
-$term2: #3988AE;
-$term3: #7E60B0;
-$term4: #009993;
-$term5: #5A61BB;
-$term6: #6083AD;
-$term7: #222226;
-$term8: #0D0D0D;
-$term9: #5651C2;
-$term10: #3988AE;
-$term11: #7E60B0;
-$term12: #009993;
-$term13: #5A61BB;
-$term14: #6083AD;
-$term15: #061942;
+$surfaceTint: #C7C4D6;
+$primary: #C7C4D6;
+$onPrimary: #2F2F3D;
+$primaryContainer: #464554;
+$onPrimaryContainer: #E3E0F2;
+$inversePrimary: #5E5D6C;
+$secondary: #C8C5D0;
+$onSecondary: #303038;
+$secondaryContainer: #47464F;
+$onSecondaryContainer: #E4E1EC;
+$tertiary: #C6C4DD;
+$onTertiary: #2F2F42;
+$tertiaryContainer: #908EA5;
+$onTertiaryContainer: #000000;
+$error: #FFB4AB;
+$onError: #690005;
+$errorContainer: #93000A;
+$onErrorContainer: #FFDAD6;
+$primaryFixed: #E3E0F2;
+$primaryFixedDim: #C7C4D6;
+$onPrimaryFixed: #1A1A27;
+$onPrimaryFixedVariant: #464554;
+$secondaryFixed: #E4E1EC;
+$secondaryFixedDim: #C8C5D0;
+$onSecondaryFixed: #1B1B23;
+$onSecondaryFixedVariant: #47464F;
+$tertiaryFixed: #E2E0F9;
+$tertiaryFixedDim: #C6C4DD;
+$onTertiaryFixed: #1A1A2C;
+$onTertiaryFixedVariant: #454559;
+$success: #B5CCBA;
+$onSuccess: #213528;
+$successContainer: #374B3E;
+$onSuccessContainer: #D1E9D6;
+$term0: #1B1A1C;
+$term1: #B071FF;
+$term2: #64DCF0;
+$term3: #FFDCF3;
+$term4: #9AA9D8;
+$term5: #B59EEA;
+$term6: #9DCEFF;
+$term7: #E8D3DE;
+$term8: #C3B5C0;
+$term9: #D5B1FF;
+$term10: #F7FDFF;
+$term11: #FFFFFF;
+$term12: #D1DCF9;
+$term13: #E3D2FF;
+$term14: #F8FAFF;
+$term15: #E5E0E9;
