--- a/home/Liqyid/common/optional/desktop/ags_notebook/style/material.scss
+++ b/home/Liqyid/common/optional/desktop/ags_notebook/style/material.scss
@@ -1,76 +1,76 @@
 $darkmode: True;
 $transparent: False;
-$primary_paletteKeyColor: #777585;
-$secondary_paletteKeyColor: #787680;
-$tertiary_paletteKeyColor: #76758B;
+$primary_paletteKeyColor: #747685;
+$secondary_paletteKeyColor: #76767F;
+$tertiary_paletteKeyColor: #72768B;
 $neutral_paletteKeyColor: #787678;
 $neutral_variant_paletteKeyColor: #787678;
-$background: #141315;
-$onBackground: #E5E1E3;
-$surface: #141315;
-$surfaceDim: #141315;
-$surfaceBright: #3A393A;
+$background: #131315;
+$onBackground: #E5E2E3;
+$surface: #131315;
+$surfaceDim: #131315;
+$surfaceBright: #39393A;
 $surfaceContainerLowest: #0E0E0F;
 $surfaceContainerLow: #1C1B1D;
 $surfaceContainer: #201F21;
 $surfaceContainerHigh: #2A2A2B;
 $surfaceContainerHighest: #353436;
-$onSurface: #E5E1E3;
-$surfaceVariant: #484648;
-$onSurfaceVariant: #C9C5C7;
-$inverseSurface: #E5E1E3;
+$onSurface: #E5E2E3;
+$surfaceVariant: #474648;
+$onSurfaceVariant: #C8C6C7;
+$inverseSurface: #E5E2E3;
 $inverseOnSurface: #313032;
 $outline: #929092;
-$outlineVariant: #484648;
+$outlineVariant: #474648;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #C7C4D6;
-$primary: #C7C4D6;
-$onPrimary: #2F2F3D;
-$primaryContainer: #464554;
-$onPrimaryContainer: #E3E0F2;
-$inversePrimary: #5E5D6C;
-$secondary: #C8C5D0;
-$onSecondary: #303038;
-$secondaryContainer: #47464F;
-$onSecondaryContainer: #E4E1EC;
-$tertiary: #C6C4DD;
-$onTertiary: #2F2F42;
-$tertiaryContainer: #908EA5;
+$surfaceTint: #C4C5D6;
+$primary: #C4C5D6;
+$onPrimary: #2D303D;
+$primaryContainer: #434654;
+$onPrimaryContainer: #E0E1F3;
+$inversePrimary: #5B5E6C;
+$secondary: #C6C6D0;
+$onSecondary: #2F3038;
+$secondaryContainer: #45464F;
+$onSecondaryContainer: #E2E1EC;
+$tertiary: #C2C5DD;
+$onTertiary: #2B3042;
+$tertiaryContainer: #8C90A6;
 $onTertiaryContainer: #000000;
 $error: #FFB4AB;
 $onError: #690005;
 $errorContainer: #93000A;
 $onErrorContainer: #FFDAD6;
-$primaryFixed: #E3E0F2;
-$primaryFixedDim: #C7C4D6;
-$onPrimaryFixed: #1A1A27;
-$onPrimaryFixedVariant: #464554;
-$secondaryFixed: #E4E1EC;
-$secondaryFixedDim: #C8C5D0;
-$onSecondaryFixed: #1B1B23;
-$onSecondaryFixedVariant: #47464F;
-$tertiaryFixed: #E2E0F9;
-$tertiaryFixedDim: #C6C4DD;
-$onTertiaryFixed: #1A1A2C;
-$onTertiaryFixedVariant: #454559;
+$primaryFixed: #E0E1F3;
+$primaryFixedDim: #C4C5D6;
+$onPrimaryFixed: #181B27;
+$onPrimaryFixedVariant: #434654;
+$secondaryFixed: #E2E1EC;
+$secondaryFixedDim: #C6C6D0;
+$onSecondaryFixed: #1A1B23;
+$onSecondaryFixedVariant: #45464F;
+$tertiaryFixed: #DEE1F9;
+$tertiaryFixedDim: #C2C5DD;
+$onTertiaryFixed: #161B2C;
+$onTertiaryFixedVariant: #424659;
 $success: #B5CCBA;
 $onSuccess: #213528;
 $successContainer: #374B3E;
 $onSuccessContainer: #D1E9D6;
 $term0: #1B1A1C;
-$term1: #B071FF;
+$term1: #9B7BFF;
 $term2: #64DCF0;
 $term3: #FFDCF3;
-$term4: #9AA9D8;
-$term5: #B59EEA;
+$term4: #92ABD6;
+$term5: #AAA1ED;
 $term6: #9DCEFF;
 $term7: #E8D3DE;
 $term8: #C3B5C0;
-$term9: #D5B1FF;
+$term9: #C8B5FF;
 $term10: #F7FDFF;
 $term11: #FFFFFF;
-$term12: #D1DCF9;
-$term13: #E3D2FF;
+$term12: #CCDDF7;
+$term13: #DDD5FF;
 $term14: #F8FAFF;
-$term15: #E5E0E9;
+$term15: #E3E2E7;
