--- a/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/material.scss
+++ b/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/material.scss
@@ -1,76 +1,76 @@
 $darkmode: True;
 $transparent: False;
-$primary_paletteKeyColor: #757685;
-$secondary_paletteKeyColor: #777680;
-$tertiary_paletteKeyColor: #74768C;
-$neutral_paletteKeyColor: #787678;
-$neutral_variant_paletteKeyColor: #787678;
-$background: #131315;
-$onBackground: #E5E1E3;
-$surface: #131315;
-$surfaceDim: #131315;
-$surfaceBright: #3A393A;
-$surfaceContainerLowest: #0E0E0F;
-$surfaceContainerLow: #1C1B1D;
-$surfaceContainer: #201F21;
-$surfaceContainerHigh: #2A2A2B;
-$surfaceContainerHighest: #353436;
-$onSurface: #E5E1E3;
-$surfaceVariant: #474648;
-$onSurfaceVariant: #C9C6C7;
-$inverseSurface: #E5E1E3;
-$inverseOnSurface: #313032;
-$outline: #929092;
-$outlineVariant: #474648;
+$primary_paletteKeyColor: #6B7980;
+$secondary_paletteKeyColor: #70787C;
+$tertiary_paletteKeyColor: #657A84;
+$neutral_paletteKeyColor: #777778;
+$neutral_variant_paletteKeyColor: #777778;
+$background: #121314;
+$onBackground: #E3E2E2;
+$surface: #121314;
+$surfaceDim: #121314;
+$surfaceBright: #38393A;
+$surfaceContainerLowest: #0D0E0F;
+$surfaceContainerLow: #1B1C1C;
+$surfaceContainer: #1F2020;
+$surfaceContainerHigh: #292A2B;
+$surfaceContainerHighest: #343535;
+$onSurface: #E3E2E2;
+$surfaceVariant: #464747;
+$onSurfaceVariant: #C7C6C7;
+$inverseSurface: #E3E2E2;
+$inverseOnSurface: #303031;
+$outline: #919091;
+$outlineVariant: #464747;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #C5C5D6;
-$primary: #C5C5D6;
-$onPrimary: #2E2F3D;
-$primaryContainer: #454654;
-$onPrimaryContainer: #E2E1F3;
-$inversePrimary: #5C5D6C;
-$secondary: #C7C5D0;
-$onSecondary: #2F3038;
-$secondaryContainer: #46464F;
-$onSecondaryContainer: #E3E1EC;
-$tertiary: #C4C5DD;
-$onTertiary: #2D2F42;
-$tertiaryContainer: #8E8FA6;
+$surfaceTint: #BAC9D1;
+$primary: #BAC9D1;
+$onPrimary: #253238;
+$primaryContainer: #3B494F;
+$onPrimaryContainer: #D6E5ED;
+$inversePrimary: #526167;
+$secondary: #C0C8CC;
+$onSecondary: #2A3235;
+$secondaryContainer: #40484C;
+$onSecondaryContainer: #DCE4E8;
+$tertiary: #B3CAD5;
+$onTertiary: #1E333C;
+$tertiaryContainer: #7E949E;
 $onTertiaryContainer: #000000;
 $error: #FFB4AB;
 $onError: #690005;
 $errorContainer: #93000A;
 $onErrorContainer: #FFDAD6;
-$primaryFixed: #E2E1F3;
-$primaryFixedDim: #C5C5D6;
-$onPrimaryFixed: #191B27;
-$onPrimaryFixedVariant: #454654;
-$secondaryFixed: #E3E1EC;
-$secondaryFixedDim: #C7C5D0;
-$onSecondaryFixed: #1A1B23;
-$onSecondaryFixedVariant: #46464F;
-$tertiaryFixed: #E0E1F9;
-$tertiaryFixedDim: #C4C5DD;
-$onTertiaryFixed: #181A2C;
-$onTertiaryFixedVariant: #434559;
+$primaryFixed: #D6E5ED;
+$primaryFixedDim: #BAC9D1;
+$onPrimaryFixed: #0F1D23;
+$onPrimaryFixedVariant: #3B494F;
+$secondaryFixed: #DCE4E8;
+$secondaryFixedDim: #C0C8CC;
+$onSecondaryFixed: #151D20;
+$onSecondaryFixedVariant: #40484C;
+$tertiaryFixed: #CFE6F1;
+$tertiaryFixedDim: #B3CAD5;
+$onTertiaryFixed: #071E26;
+$onTertiaryFixedVariant: #354A53;
 $success: #B5CCBA;
 $onSuccess: #213528;
 $successContainer: #374B3E;
 $onSuccessContainer: #D1E9D6;
-$term0: #1B1A1C;
-$term1: #A078FF;
-$term2: #64DCF0;
-$term3: #FFDCF3;
-$term4: #94ABD7;
-$term5: #ADA1ED;
-$term6: #9DCEFF;
-$term7: #E8D3DE;
-$term8: #C3B5C0;
-$term9: #CBB5FF;
-$term10: #F7FDFF;
+$term0: #1A1B1B;
+$term1: #8383FF;
+$term2: #64DDE6;
+$term3: #75FCDD;
+$term4: #7AB3C6;
+$term5: #7AAEEA;
+$term6: #82D5E5;
+$term7: #CCDBD5;
+$term8: #B1BCB5;
+$term9: #BCB9FF;
+$term10: #F6FFFF;
 $term11: #FFFFFF;
-$term12: #CDDDF8;
-$term13: #DED4FF;
-$term14: #F8FAFF;
-$term15: #E5E0E9;
+$term12: #BFE2EB;
+$term13: #C8DAFF;
+$term14: #F1FDFF;
+$term15: #DDE3E5;
