change wlogout font-size

--- a/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/material.scss
+++ b/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/material.scss
@@ -1,76 +1,76 @@
-$darkmode: True;
+$darkmode: False;
 $transparent: False;
-$primary_paletteKeyColor: #6B7980;
-$secondary_paletteKeyColor: #70787C;
-$tertiary_paletteKeyColor: #657A84;
-$neutral_paletteKeyColor: #777778;
-$neutral_variant_paletteKeyColor: #777778;
-$background: #121314;
-$onBackground: #E3E2E2;
-$surface: #121314;
-$surfaceDim: #121314;
-$surfaceBright: #38393A;
-$surfaceContainerLowest: #0D0E0F;
-$surfaceContainerLow: #1B1C1C;
-$surfaceContainer: #1F2020;
-$surfaceContainerHigh: #292A2B;
-$surfaceContainerHighest: #343535;
-$onSurface: #E3E2E2;
-$surfaceVariant: #464747;
-$onSurfaceVariant: #C7C6C7;
-$inverseSurface: #E3E2E2;
-$inverseOnSurface: #303031;
-$outline: #919091;
-$outlineVariant: #464747;
+$primary_paletteKeyColor: #00BDFF;
+$secondary_paletteKeyColor: #627995;
+$tertiary_paletteKeyColor: #6576A5;
+$neutral_paletteKeyColor: #6E7880;
+$neutral_variant_paletteKeyColor: #6C7982;
+$background: #F5FAFF;
+$onBackground: #131D23;
+$surface: #F5FAFF;
+$surfaceDim: #D1DBE4;
+$surfaceBright: #F5FAFF;
+$surfaceContainerLowest: #FFFFFF;
+$surfaceContainerLow: #EBF5FD;
+$surfaceContainer: #E5EFF8;
+$surfaceContainerHigh: #E0E9F2;
+$surfaceContainerHighest: #DAE4EC;
+$onSurface: #131D23;
+$surfaceVariant: #D7E4EF;
+$onSurfaceVariant: #3C4851;
+$inverseSurface: #283238;
+$inverseOnSurface: #E8F2FA;
+$outline: #6A767F;
+$outlineVariant: #BBC8D2;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #BAC9D1;
-$primary: #BAC9D1;
-$onPrimary: #253238;
-$primaryContainer: #3B494F;
-$onPrimaryContainer: #D6E5ED;
-$inversePrimary: #526167;
-$secondary: #C0C8CC;
-$onSecondary: #2A3235;
-$secondaryContainer: #40484C;
-$onSecondaryContainer: #DCE4E8;
-$tertiary: #B3CAD5;
-$onTertiary: #1E333C;
-$tertiaryContainer: #7E949E;
-$onTertiaryContainer: #000000;
-$error: #FFB4AB;
-$onError: #690005;
-$errorContainer: #93000A;
-$onErrorContainer: #FFDAD6;
-$primaryFixed: #D6E5ED;
-$primaryFixedDim: #BAC9D1;
-$onPrimaryFixed: #0F1D23;
-$onPrimaryFixedVariant: #3B494F;
-$secondaryFixed: #DCE4E8;
-$secondaryFixedDim: #C0C8CC;
-$onSecondaryFixed: #151D20;
-$onSecondaryFixedVariant: #40484C;
-$tertiaryFixed: #CFE6F1;
-$tertiaryFixedDim: #B3CAD5;
-$onTertiaryFixed: #071E26;
-$onTertiaryFixedVariant: #354A53;
-$success: #B5CCBA;
-$onSuccess: #213528;
-$successContainer: #374B3E;
-$onSuccessContainer: #D1E9D6;
-$term0: #1A1B1B;
-$term1: #8383FF;
-$term2: #64DDE6;
-$term3: #75FCDD;
-$term4: #7AB3C6;
-$term5: #7AAEEA;
-$term6: #82D5E5;
-$term7: #CCDBD5;
-$term8: #B1BCB5;
-$term9: #BCB9FF;
-$term10: #F6FFFF;
-$term11: #FFFFFF;
-$term12: #BFE2EB;
-$term13: #C8DAFF;
-$term14: #F1FDFF;
-$term15: #DDE3E5;
+$surfaceTint: #00658B;
+$primary: #00658B;
+$onPrimary: #FFFFFF;
+$primaryContainer: #C4E7FF;
+$onPrimaryContainer: #001E2C;
+$inversePrimary: #7DD0FF;
+$secondary: #49607B;
+$onSecondary: #FFFFFF;
+$secondaryContainer: #C7DFFF;
+$onSecondaryContainer: #021D35;
+$tertiary: #6373A2;
+$onTertiary: #FFFFFF;
+$tertiaryContainer: #6373A2;
+$onTertiaryContainer: #FFFFFF;
+$error: #BA1A1A;
+$onError: #FFFFFF;
+$errorContainer: #FFDAD6;
+$onErrorContainer: #410002;
+$primaryFixed: #C4E7FF;
+$primaryFixedDim: #7DD0FF;
+$onPrimaryFixed: #001E2C;
+$onPrimaryFixedVariant: #004C69;
+$secondaryFixed: #D1E4FF;
+$secondaryFixedDim: #B1C8E8;
+$onSecondaryFixed: #021D35;
+$onSecondaryFixedVariant: #324862;
+$tertiaryFixed: #DAE2FF;
+$tertiaryFixedDim: #B4C5F9;
+$onTertiaryFixed: #041943;
+$onTertiaryFixedVariant: #344571;
+$success: #4F6354;
+$onSuccess: #FFFFFF;
+$successContainer: #D1E8D5;
+$onSuccessContainer: #0C1F13;
+$term0: #DAE8F2;
+$term1: #1B5CC2;
+$term2: #008CA2;
+$term3: #7E60B0;
+$term4: #009993;
+$term5: #096CBC;
+$term6: #2F89AD;
+$term7: #202225;
+$term8: #0D0D0D;
+$term9: #1B5CC2;
+$term10: #008CA2;
+$term11: #7E60B0;
+$term12: #009993;
+$term13: #096CBC;
+$term14: #2F89AD;
+$term15: #001F2C;
