change wlogout font-size on desktop

--- a/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/material.scss
+++ b/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/material.scss
@@ -1,76 +1,76 @@
-$darkmode: False;
+$darkmode: True;
 $transparent: False;
-$primary_paletteKeyColor: #00BDFF;
-$secondary_paletteKeyColor: #627995;
-$tertiary_paletteKeyColor: #6576A5;
-$neutral_paletteKeyColor: #6E7880;
-$neutral_variant_paletteKeyColor: #6C7982;
-$background: #F5FAFF;
-$onBackground: #131D23;
-$surface: #F5FAFF;
-$surfaceDim: #D1DBE4;
-$surfaceBright: #F5FAFF;
-$surfaceContainerLowest: #FFFFFF;
-$surfaceContainerLow: #EBF5FD;
-$surfaceContainer: #E5EFF8;
-$surfaceContainerHigh: #E0E9F2;
-$surfaceContainerHighest: #DAE4EC;
-$onSurface: #131D23;
-$surfaceVariant: #D7E4EF;
-$onSurfaceVariant: #3C4851;
-$inverseSurface: #283238;
-$inverseOnSurface: #E8F2FA;
-$outline: #6A767F;
-$outlineVariant: #BBC8D2;
+$primary_paletteKeyColor: #0997FF;
+$secondary_paletteKeyColor: #6B7697;
+$tertiary_paletteKeyColor: #7272A5;
+$neutral_paletteKeyColor: #717781;
+$neutral_variant_paletteKeyColor: #707885;
+$background: #0E141C;
+$onBackground: #DDE3EE;
+$surface: #0E141C;
+$surfaceDim: #0E141C;
+$surfaceBright: #343A43;
+$surfaceContainerLowest: #090F16;
+$surfaceContainerLow: #161C24;
+$surfaceContainer: #1A2028;
+$surfaceContainerHigh: #242A33;
+$surfaceContainerHighest: #2F353E;
+$onSurface: #DDE3EE;
+$surfaceVariant: #3F4753;
+$onSurfaceVariant: #BFC7D5;
+$inverseSurface: #DDE3EE;
+$inverseOnSurface: #2B313A;
+$outline: #89919E;
+$outlineVariant: #3F4753;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #00658B;
-$primary: #00658B;
-$onPrimary: #FFFFFF;
-$primaryContainer: #C4E7FF;
-$onPrimaryContainer: #001E2C;
-$inversePrimary: #7DD0FF;
-$secondary: #49607B;
-$onSecondary: #FFFFFF;
-$secondaryContainer: #C7DFFF;
-$onSecondaryContainer: #021D35;
-$tertiary: #6373A2;
-$onTertiary: #FFFFFF;
-$tertiaryContainer: #6373A2;
-$onTertiaryContainer: #FFFFFF;
-$error: #BA1A1A;
-$onError: #FFFFFF;
-$errorContainer: #FFDAD6;
-$onErrorContainer: #410002;
-$primaryFixed: #C4E7FF;
-$primaryFixedDim: #7DD0FF;
-$onPrimaryFixed: #001E2C;
-$onPrimaryFixedVariant: #004C69;
-$secondaryFixed: #D1E4FF;
-$secondaryFixedDim: #B1C8E8;
-$onSecondaryFixed: #021D35;
-$onSecondaryFixedVariant: #324862;
-$tertiaryFixed: #DAE2FF;
-$tertiaryFixedDim: #B4C5F9;
-$onTertiaryFixed: #041943;
-$onTertiaryFixedVariant: #344571;
-$success: #4F6354;
-$onSuccess: #FFFFFF;
-$successContainer: #D1E8D5;
-$onSuccessContainer: #0C1F13;
-$term0: #DAE8F2;
-$term1: #1B5CC2;
-$term2: #008CA2;
-$term3: #7E60B0;
-$term4: #009993;
-$term5: #096CBC;
-$term6: #2F89AD;
-$term7: #202225;
-$term8: #0D0D0D;
-$term9: #1B5CC2;
-$term10: #008CA2;
-$term11: #7E60B0;
-$term12: #009993;
-$term13: #096CBC;
-$term14: #2F89AD;
-$term15: #001F2C;
+$surfaceTint: #A1C9FF;
+$primary: #A1C9FF;
+$onPrimary: #00325A;
+$primaryContainer: #00487F;
+$onPrimaryContainer: #D2E4FF;
+$inversePrimary: #0061A7;
+$secondary: #BBC6EA;
+$onSecondary: #252F4D;
+$secondaryContainer: #3B4665;
+$onSecondaryContainer: #DAE2FF;
+$tertiary: #C2C1F9;
+$onTertiary: #2B2B59;
+$tertiaryContainer: #8C8CC0;
+$onTertiaryContainer: #000000;
+$error: #FFB4AB;
+$onError: #690005;
+$errorContainer: #93000A;
+$onErrorContainer: #FFDAD6;
+$primaryFixed: #D2E4FF;
+$primaryFixedDim: #A1C9FF;
+$onPrimaryFixed: #001C37;
+$onPrimaryFixedVariant: #00487F;
+$secondaryFixed: #DAE2FF;
+$secondaryFixedDim: #BBC6EA;
+$onSecondaryFixed: #0F1A37;
+$onSecondaryFixedVariant: #3B4665;
+$tertiaryFixed: #E1DFFF;
+$tertiaryFixedDim: #C2C1F9;
+$onTertiaryFixed: #151543;
+$onTertiaryFixedVariant: #414271;
+$success: #B5CCBA;
+$onSuccess: #213528;
+$successContainer: #374B3E;
+$onSuccessContainer: #D1E9D6;
+$term0: #131B25;
+$term1: #8383FF;
+$term2: #64DCF0;
+$term3: #75FCDD;
+$term4: #87AED2;
+$term5: #95A7EF;
+$term6: #90D1F7;
+$term7: #CCDBD5;
+$term8: #C3B5C0;
+$term9: #BCB9FF;
+$term10: #F7FDFF;
+$term11: #FFFFFF;
+$term12: #C6DFF4;
+$term13: #D2D8FF;
+$term14: #F6FBFF;
+$term15: #D1E4FF;
