--- a/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/material.scss
+++ b/home/Liqyid/common/optional/desktop/ags/ags_desktop/style/material.scss
@@ -1,76 +1,76 @@
 $darkmode: True;
 $transparent: False;
-$primary_paletteKeyColor: #0997FF;
-$secondary_paletteKeyColor: #6B7697;
-$tertiary_paletteKeyColor: #7272A5;
-$neutral_paletteKeyColor: #717781;
-$neutral_variant_paletteKeyColor: #707885;
-$background: #0E141C;
-$onBackground: #DDE3EE;
-$surface: #0E141C;
-$surfaceDim: #0E141C;
-$surfaceBright: #343A43;
-$surfaceContainerLowest: #090F16;
-$surfaceContainerLow: #161C24;
-$surfaceContainer: #1A2028;
-$surfaceContainerHigh: #242A33;
-$surfaceContainerHighest: #2F353E;
-$onSurface: #DDE3EE;
-$surfaceVariant: #3F4753;
-$onSurfaceVariant: #BFC7D5;
-$inverseSurface: #DDE3EE;
-$inverseOnSurface: #2B313A;
-$outline: #89919E;
-$outlineVariant: #3F4753;
+$primary_paletteKeyColor: #6B7980;
+$secondary_paletteKeyColor: #70787C;
+$tertiary_paletteKeyColor: #647A84;
+$neutral_paletteKeyColor: #777778;
+$neutral_variant_paletteKeyColor: #777778;
+$background: #121314;
+$onBackground: #E3E2E2;
+$surface: #121314;
+$surfaceDim: #121314;
+$surfaceBright: #38393A;
+$surfaceContainerLowest: #0D0E0F;
+$surfaceContainerLow: #1B1C1C;
+$surfaceContainer: #1F2020;
+$surfaceContainerHigh: #292A2B;
+$surfaceContainerHighest: #343535;
+$onSurface: #E3E2E2;
+$surfaceVariant: #464747;
+$onSurfaceVariant: #C7C6C7;
+$inverseSurface: #E3E2E2;
+$inverseOnSurface: #303031;
+$outline: #919091;
+$outlineVariant: #464747;
 $shadow: #000000;
 $scrim: #000000;
-$surfaceTint: #A1C9FF;
-$primary: #A1C9FF;
-$onPrimary: #00325A;
-$primaryContainer: #00487F;
-$onPrimaryContainer: #D2E4FF;
-$inversePrimary: #0061A7;
-$secondary: #BBC6EA;
-$onSecondary: #252F4D;
-$secondaryContainer: #3B4665;
-$onSecondaryContainer: #DAE2FF;
-$tertiary: #C2C1F9;
-$onTertiary: #2B2B59;
-$tertiaryContainer: #8C8CC0;
+$surfaceTint: #BAC9D0;
+$primary: #BAC9D0;
+$onPrimary: #253238;
+$primaryContainer: #3B494F;
+$onPrimaryContainer: #D6E5ED;
+$inversePrimary: #526167;
+$secondary: #C0C8CC;
+$onSecondary: #2A3235;
+$secondaryContainer: #40484C;
+$onSecondaryContainer: #DCE4E8;
+$tertiary: #B3CAD5;
+$onTertiary: #1E333C;
+$tertiaryContainer: #7E949E;
 $onTertiaryContainer: #000000;
 $error: #FFB4AB;
 $onError: #690005;
 $errorContainer: #93000A;
 $onErrorContainer: #FFDAD6;
-$primaryFixed: #D2E4FF;
-$primaryFixedDim: #A1C9FF;
-$onPrimaryFixed: #001C37;
-$onPrimaryFixedVariant: #00487F;
-$secondaryFixed: #DAE2FF;
-$secondaryFixedDim: #BBC6EA;
-$onSecondaryFixed: #0F1A37;
-$onSecondaryFixedVariant: #3B4665;
-$tertiaryFixed: #E1DFFF;
-$tertiaryFixedDim: #C2C1F9;
-$onTertiaryFixed: #151543;
-$onTertiaryFixedVariant: #414271;
+$primaryFixed: #D6E5ED;
+$primaryFixedDim: #BAC9D0;
+$onPrimaryFixed: #0F1D23;
+$onPrimaryFixedVariant: #3B494F;
+$secondaryFixed: #DCE4E8;
+$secondaryFixedDim: #C0C8CC;
+$onSecondaryFixed: #151D20;
+$onSecondaryFixedVariant: #40484C;
+$tertiaryFixed: #CFE6F1;
+$tertiaryFixedDim: #B3CAD5;
+$onTertiaryFixed: #071E26;
+$onTertiaryFixedVariant: #354A53;
 $success: #B5CCBA;
 $onSuccess: #213528;
 $successContainer: #374B3E;
 $onSuccessContainer: #D1E9D6;
-$term0: #131B25;
+$term0: #1A1B1B;
 $term1: #8383FF;
-$term2: #64DCF0;
+$term2: #64DDE6;
 $term3: #75FCDD;
-$term4: #87AED2;
-$term5: #95A7EF;
-$term6: #90D1F7;
+$term4: #7AB3C6;
+$term5: #7AAEEA;
+$term6: #82D5E5;
 $term7: #CCDBD5;
-$term8: #C3B5C0;
+$term8: #B1BCB5;
 $term9: #BCB9FF;
-$term10: #F7FDFF;
+$term10: #F6FFFF;
 $term11: #FFFFFF;
-$term12: #C6DFF4;
-$term13: #D2D8FF;
-$term14: #F6FBFF;
-$term15: #D1E4FF;
+$term12: #BFE2EB;
+$term13: #C8DAFF;
+$term14: #F1FDFF;
+$term15: #DDE3E5;
